# snek

./: Cargo.toml  README.md
src/: main.rs
src/core/: component.rs  direction.rs  game.rs  mod.rs  point.rs  snake.rs  system.rs
src/core/ecs/: entities.rs  entityidaccessor.rs  entitymanager.rs  mod.rs  simulation.rs  system.rs
src/core/gui/: buffer.rs  event_handler.rs  mod.rs  screen.rs  window.rs
