[package]
name = "snake"
version = "0.1.0"
authors = ["Thomas Andolf <thomas.andolf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
crossterm = "0.19.0"
rand = "0.8.3"
unicode-width = "0.1.10"
